--- a/02-week2.Rmd
+++ b/02-week2.Rmd
@@ -326,7 +326,7 @@ print(df)
 
 You then want to plot this. To do so, you want to create a plot that combines the following layers: 
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=3, fig.width=6, fig.cap = 'Layers of ggplot', fig.alt='Three panes showing different components of a plot. The first pane shows the column geometry, the second pane shows the axes, values along them, and their labels "Crime type" versus "Number of Crimes", and the third pane shows the title "Frequency of crime types", and a border.'}
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 # create three separate plots to illustrate the layers
 p1 <- ggplot(df, aes(x = crime_type, y = n)) + 
@@ -351,7 +351,7 @@ gridExtra::grid.arrange(p1, p2, p3, nrow = 1)
 
 This will result in a final plot: 
 
-```{r, echo = FALSE, message=FALSE, warning=FALSE, fig.cap='Final plot', fig.height=3, fig.alt='The completed bar plot "Frequency of crime types", combining the previous three layers into a single image.'}
+```{r, echo = FALSE, message=FALSE, warning=FALSE}
 
 ggplot(df, aes(x = gsub(" from the person", "",crime_type), y = n)) + 
   geom_bar(stat = "identity") + 
@@ -388,7 +388,7 @@ library(ggplot2)
 
 Now let us add the layers to our ggplot object. First, the data layer: 
 
-```{r, fig.cap='Data layer', fig.height=3, fig.alt='A grid background, with horizontal axis "crime_type" with notches denoted "Robbery, "Shoplifting", and "Theft from the person", and vertical axis "n", ranging from five hundred to fifteen hundred, with numbers denoted at intervals of two hundred and fifty.'}
+```{r}
 
 ggplot(df, aes(x = crime_type, y = n))
 
@@ -398,7 +398,7 @@ ggplot(df, aes(x = crime_type, y = n))
 Then add the geometry (in this case, `geom_col()`): 
 
 
-```{r, fig.cap='Geometry layer', fig.height=3, fig.alt='The previous grid, now containing rectangular bars denoting the values corresponding to the crime types. The "n" axis now starts at zero, and the height of the bars is just under five hundred for "Robbery", fifteen hundred for "Shoplifting", and seven hundred and fifty for "Theft from the person".'}
+```{r}
 
 ggplot(df, aes(x = crime_type, y = n)) + 
   geom_col()
@@ -406,7 +406,7 @@ ggplot(df, aes(x = crime_type, y = n)) +
 
 Then our annotations: 
 
-```{r, fig.cap='Annotations layer', fig.height=3, fig.alt='The previous plot, now with the title "Frequency of crime types", and the axes labeled as "Crime type" and "Number of crimes".'}
+```{r}
 
 ggplot(df, aes(x = crime_type, y = n)) + 
   geom_col() + 
@@ -418,7 +418,7 @@ ggplot(df, aes(x = crime_type, y = n)) +
 
 We can also specify our themes, by using a custom theme such as `theme_minimal()`, and by adding our own specifications within an additional `theme()` function: 
 
-```{r, fig.cap='Customise themes', fig.height=3, fig.alt='The previous plot, with the background shading altered, and a black border.'}
+```{r}
 
 ggplot(df, aes(x = crime_type, y = n)) + 
   geom_col() + 
@@ -433,7 +433,7 @@ ggplot(df, aes(x = crime_type, y = n)) +
 
 We can add further specifications within the `aes()` (aesthetics) function, where we add additional layers from our data, to represent even more information in our charts, for example the outcomes for each crime. 
 
-```{r, fig.cap='Additional layers', fig.height=3, fig.alt='The previous graph has been squished horizontally and moved left, and the bars are now divided into colours vertically. The right side contains the title "last_outcome_category", as well as a legend for the colours, the most prominent of which are "Investigation complete; no suspect identified", "Status update unavailable", and "Unable to prosecute suspect".'}
+```{r}
 
 # create new dataframe (df) including last_outcome_category variable
 
@@ -458,7 +458,7 @@ ggplot(df, aes(x = crime_type, y = n, fill = last_outcome_category)) +
 
 We can be explicit about the colours we want to use with the function `scale_fill_brewer()`, which we can also use to rename our legend. Don't worry too much at this point about where the palette comes from; later in the module we will discuss colour in more detail. 
 
-```{r, fig.cap='Customise colour', fig.height=3, fig.alt='The previous graph with colours now has more easily distinguishable colours, and the legend has the title "Outcome".'}
+```{r}
 
 ggplot(df, aes(x = crime_type,  y = n, fill = last_outcome_category)) + 
   geom_col() + 
@@ -736,7 +736,7 @@ So we've already identified that both our crimes data, and the spatial data cont
 
 **You need a unique identifier to be present** for each row in all the data sets that you wish to join. This is how R knows what values belong to what row! What you are doing is matching each value from one table to the next, using this unique identified column, that exists in both tables. For example, let's say we have two data sets from some people in Hawkins, Indiana. In one data set we collected information about their age. In another one, we collected information about their hair colour. If we collected some information that is unique to each observation, and this is the *same* in both sets of data, for example their names, then we can link them up, based on this information.   Something like this: 
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.cap='Two dataframes with common unique identifier', fig.alt='Two tables side by side. The first has columns for name and age, and lists "Barb" as sixteen, "Steve" as sixteen, and "Mike" as thirteen. The second has columns for name and hair colour, and lists "Barb" as "Red", "Steve" as "Brown", and "Mike" as "Black".'}
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 library(grid)
 library(gridExtra)
 
@@ -753,7 +753,7 @@ grid.arrange(tableGrob(t1), tableGrob(t2), nrow = 1)
 
 And by doing so, we produce a final table that contains all values, lined up *correctly* for each individual observation, like this: 
 
-```{r, echo=FALSE, warning=FALSE, message=FALSE, fig.cap='Joined dataframe', fig.alt='One table with three columns: name, age, and hair colour. The first row contains "Barb", with age sixteen, and a hair colour of red. The second, "Steve", sixteen, and brown, while the third "Mike", thirteen, and black.' }
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
 
 t3 <- left_join(t1, t2)
 
@@ -791,9 +791,9 @@ ggplot() +
 geom_sf(data = manchester_lsoa)
 ```
 
-Well now, since we have the column (variable) for number of crimes here, we can use that to share the polygons based on how many crimes there are in each LSOA. We can do this by specifying the `fill=` parameter of the `geom_sf` function. 
+Well now, since we have the column (variable) for number of crimes here, we can use that to share the polygons based on how many crimes there are in each LSOA. We can do this by specifying the `fill=` parameter of the `geom_sf()` function. 
 
-```{r, fig.cap='Number of crimes in Manchester by LSOA', fig.alt="A plot of all the boundaries of Manchester's Lower Layer Super Output Areas, placed on a grey grid. To the right, labeled 'count', is a gradient from dark blue to light blue accompanies numbers from zero to over six hundred. Each LSOA in the plot is shaded by a colour on this gradient. Most of the plot is darker shades of blue, corresponding to lower numbers, but there are lighter areas near the centre of Manchester. The axes denote latitudes and longitudes as before."}
+```{r}
 
 ggplot() + 
 geom_sf(data = manchester_lsoa, aes(fill = count))
@@ -802,7 +802,7 @@ geom_sf(data = manchester_lsoa, aes(fill = count))
 
 Just like we did with the ggplot bar charts we created earlier, we can adjust the opacity of our thematic map, with the `alpha =` parameter, add a basemap, with the function `annotation_map_tile()` and adjust the colour scheme, with the `scale_fill_gradient2()` function.  
 
-```{r, message=FALSE, fig.cap='Number of crimes by LSOA with adjusted parameters', fig.alt="The previous plot overlaid on a map of Manchester. The gradient has been inverted, with lighter colours denoting lower number of crimes, and darker blue more. The label of the gradient is now 'Number of crimes'."}
+```{r, message=FALSE}
 
 ggplot() + 
   annotation_map_tile() +  # add basemap
